@@ -50,7 +50,7 @@ abstract class CombiningEvaluator extends Evaluator {
 
         @Override
         public boolean matches(Element root, Element node) {
-            for (int i = 0; i < num; i++) {
+            for (int i = num - 1; i >= 0; i--) { // process backwards so that :matchText is evaled earlier, to catch parent query. todo - should redo matchText to virtually expand during match, not pre-match (see SelectorTest#findBetweenSpan)
                 Evaluator s = evaluators.get(i);
                 if (!s.matches(root, node))
                     return false;
@@ -60,7 +60,7 @@ abstract class CombiningEvaluator extends Evaluator {
 
         @Override
         public String toString() {
-            return StringUtil.join(evaluators, " ");
+            return StringUtil.join(evaluators, "");
         }
     }
 
